--- a/src/blok-haus.pug
+++ b/src/blok-haus.pug
@@ -42,7 +42,25 @@ block product
                         td ЭКСТРА
                         td.price 663 руб.
 
+    h3.article__title Производство блок хауса
+
+    p.article__p Модифицированный вариант вагонки производится в виде сегмента оцилиндрованного бревна с плоской внутренней и закругленной наружной стороной. Чаще используется дерево хвойных пород: сосна, ель, лиственница и пр., что не исключает возможности выбора другой древесины. Крепежная система "шип-паз" позволяет говорить о надежности и высокой скорости укладки блоков.
+    h3.article__title Сортность
+
+    p.article__p Сортность блока хауса определяется следующими классами: А, В, С, Прима, Экстра.
 
 
-    h3.article__title
-    p.article__p
+    p.article__p Мы специализируемся на досках класса А (первый сорт)- они выгодно отличается отсутствием механических повреждений и минимально возможным количеством сучков на погонный метр.
+    h3.article__title Размеры и стоимость блок хауса
+
+    p.article__p В стандартном исполнении деревянный блок хаус предлагается длиной 3м и 6м с различной шириной (от 96 до 245 мм) и толщиной (от 20 до 45 мм).
+
+    p.article__p Формируют цену размер (зависит площадь покрытия м2) и сортность. Дополнительные факторы, влияющие на стоимость: вид древесины, объем заказа, удаленность объекта строительства при доставке продукции транспортом компании. Прайс-лист поможет вам составить общее представление о стоимости квадратного метра покрытия в зависимости от размеров доски.
+    h3.article__title Применение
+
+    p.article__p Неширокий деревянный блок-хаус используется для внутренней отделки помещений. Также узкая доска применяется для обшивки беседок, террас, веранд.
+
+    p.article__p В случае фасадных стен рекомендован широкий блок-хаус для наружных работ. Более крупный материал позволяет с минимальными временными затратами покрыть значительно больше квадратных метров, чем узкая, кроме того, она толще и является дополнительным наружным утеплением.
+    h3.article__title Заказ и оплата
+
+    p.article__p Дешево купить квадратный метр блок хауса в Москве вы сможете в "STROН-ZAKAZ", где вам предложат качественный пиломатериал и обеспечат своевременную доставку. Для оформления заказа достаточно сделать онлайн заказ, отправить заявку на электронный адрес компании или позвонить по номеру контактного телефона, указанного на сайте.
