--- a/src/brus-profilirovannyy.pug
+++ b/src/brus-profilirovannyy.pug
@@ -101,5 +101,27 @@ block product
                         td.price 11050 руб.
 
 
-    h3.article__title
-    p.article__p
+
+    h3.article__title Преимущество материала
+
+
+    p.article__p Сухой профилированный брус, цена которого отличается доступностью, обладает массой положительных характеристик:
+    p.article__p — отменные теплоизоляционные показатели (обеспечивает комфортный климат внутри помещения);
+    p.article__p — наличие дышащих качеств, благодаря чему внутри помещения всегда сохраняется свежий воздух;
+    p.article__p —  экологическая чистота (профильный брус совершенно безвреден для здоровья аллергиков и маленьких детей);
+    p.article__p — стойкость к перепадам температур;
+    p.article__p — простота укладки.
+    h3.article__title Особенности профилированного бруса
+    p.article__p Наша компания не первый год осуществляет производство профилированного бруса в Московской области, пригодного для возведения бытовых и жилых построек.
+
+    p.article__p У нас можно приобрести материал как оптом, так и в розницу.
+
+    p.article__p p.article__p Основу нашего товарного ассортимента представляет профилированный брус камерной сушки, изготовленный из высококачественного сырья. В отличие от аналога – пиломатериала естественной влажности, такой профилированный брус имеет более низкую влажность (10-14%), за счет чего материал получает повышенные показатели прочности.
+    p.article__p Общие характеристики изделия: 1 сорт, хвойные породы древесины. Сырье и сама готовая продукция соответствует всем нормам и требованиям ГОСТ.
+
+    p.article__p Нами осуществляется продажа профилированного бруса следующего калибра:
+    p.article__p —  100х100х6;
+    p.article__p —  100х200х6;
+    p.article__p — 150х150х6;
+    p.article__p — 150х200х6;
+    p.article__p — другие варианты.
