--- a/src/brus-stroganyy.pug
+++ b/src/brus-stroganyy.pug
@@ -100,6 +100,39 @@ block product
                         td 4
                         td.price 13600 руб.
 
+    h3.article__title В продаже существует несколько видов материала, которые используются современными строителями  в процессе возведения сооружений.
 
-    h3.article__title
-    p.article__p
+
+    p.article__p Высокий спрос на сухой строганный брус при строительстве домов и приусадебных помещений обусловлен большим набором преимуществ, в числе которых:
+    p.article__p — хорошая воздухопроницаемость, обеспечивающая отсутствие конденсата;
+    p.article__p — экономия за счет снижения стоимости отделки;
+    p.article__p — экологичность;
+    p.article__p — долговечность (применение специальных пропиток позволит сделать так, что — готовое сооружение из строганного бруса будет стоять без потребности в ремонте не одно десятилетие);
+    p.article__p — выгодная цена строительных работ.
+    h3.article__title Свойства древесины
+    p.article__p Материал изготовляется, в основном, из древесины хвойных пород — сосны и ели. Уникальные свойства древесных волокон хвойных растений позволяют добиваться возведения идеально ровных стен даже без тщательной обработки. Этим достигается эстетичность строений, где используется данный пиломатериал. Кроме того, древесина сосны и ели выделяет смолистые вещества, препятствующие её гниению и другим разрушительным процессам с участием грибков и бактерий. Пиломатериалы из хвойного дерева прочны и часто служат владельцам дома многие десятки лет без капитального ремонта.
+    h3.article__title Процесс призводства сухого строганного бруса
+
+
+    p.article__p Строганный брус, изготовленный путем такой технологии, называется сухим. В данном случае материал высушивают в специальной камере от 7 до 14 дней. В итоге, влажность сухой древесины снижается до 12-15%. После того, как происходит сушка, качество материала повышается.
+
+    p.article__p Главное преимущество строганного бруса в том, что он не дает усадки и не деформируется. Сушеную древесину можно использовать сразу же поле покупки. Также сушеный брусья приобретают отличные теплоизоляционные показатели и не требуют дополнительной шлифовки, поскольку их поверхность после просушки становится ровной. Поскольку на изготовление такого материала производитель тратит больше времени, стоить такой товар будет дороже, чем аналог с естественным показателем влажности.
+
+    h3.article__title Как заказать строганный брус и сколько он будет стоить у нас?
+
+
+    p.article__p Мы осуществляем продажу сухого строганного пиломатериала оптом и в розницу. У нас можно купить строганый пиломатериал из сосны, не нуждающийся в шлифовке, следующих популярных для строительства размеров:
+    p.article__p — 20х40х3000;
+    p.article__p — 20х50х3000;
+    p.article__p — 40х40х3000;
+    p.article__p — 40х50х3000;
+    p.article__p — 45х45х3000;
+    p.article__p — 50х50х3000;
+    p.article__p — 50х70х3000;
+    p.article__p — 100х100х6000;
+    p.article__p —  100х150х6000;
+    p.article__p — 100х200х6000;
+    p.article__p — 150х150х6000;
+    p.article__p — 150х200х6000;
+    p.article__p — 200х200х6000;
+    p.article__p — другие варианты калибровки.
