--- a/src/brusok.pug
+++ b/src/brusok.pug
@@ -117,6 +117,16 @@ block product
                         td.price 144 руб.
 
 
+    h3.article__title Наша компания занимается производством и реализацией деревянных брусков.
+    p.article__p Основной материал, идущий на изделия: ель и сосна. Эти породы деревьев сочетают в себе полезные качества: прочность, устойчивость к загниванию, терпимость к температурным колебаниям и небольшую цену. Эти свойства сделали эти породы востребованными в самых разнообразных отраслях народного хозяйства. Стоимость брусков из хвойных пород гораздо ниже других видов древесины.
+    h3.article__title Разновидности бруска
 
-    h3.article__title
-    p.article__p
+    p.article__p Брусок – один из видов хвойных пиломатериалов. От бруса его отличает размер торцевого сечения и длина. Ширина и толщина - не больше 100 мм, длина – 3 м. Пиломатериал, превосходящий эти размеры, считается брусом, а при соотношении сечения 1: 2 – доской. Чтобы получить брусок, дерево подвергается обработке. В результате распила дерева, получаются бруски прямоугольной формы.
+
+    p.article__p Основные виды:
+    p.article__p — обрезной (естественной влажности);
+    p.article__p — строганый (камерной сушки).
+
+    p.article__p Брусок, подвергшийся шлифовке, называют строганым, а подвергшийся просушке в специальной камере – брусок камерной сушки. Применяется при строительстве и декоративной отделке подсобных помещений, веранд, павильонов. Сухой строганный брусок ценится дороже обычного, так как он подвергается дополнительной обработке – сушке.
+    h3.article__title Где купить?
+    p.article__p Купить бруски деревянные у нас можно по цене от 35 рублей за шт. Мы готовы поставить вам бруски оптом и в розницу нужного вам размера, сечения и вида. Мы работаем напрямую с покупателем. Качество товара и невысокую цену гарантируем. Связавшись с нами по контактному телефону или e-mail, можете рассчитывать на оперативное обслуживание.
