--- a/src/doska-obreznaya.pug
+++ b/src/doska-obreznaya.pug
@@ -218,6 +218,19 @@ block product
                         td 44
                         td.price 3570 руб.
 
+    h3.article__title Ассортимент
 
-    h3.article__title
-    p.article__p
+    p.article__p В зависимости от кромки различают разные сорта изделий, а именно: 1, 2 сорт. Первосортная доска обрезная сухая от производителя Руслесгрупп без сучков, она не деформирована, имеет ровную текстуру. Цена материала рассчитывается в метрах кубических.
+
+    p.article__p Купить доску обрезную сухую можно в разных типоразмерах: толщина от 25 до 50 мм, ширина от 100 до 200 мм, длина – 6 метров. Если вам необходимы нестандартные габариты – то обратитесь для заказа к нашим менеджерам по телефонам на сайте.
+
+    p.article__p Ширина изделия в два раза превышает его толщину. Ровные геометрические формы, отсутствие усадки и высокая прочность – главные преимущества материала. обладает повышенной стойкостью к гниению, легко поддается обработке, имеет высокие изолирующие свойства, экологически безопасна. Доступная цена и высокие показатели качества делают этот пиломатериал особенно популярным.
+    h3.article__title Производство обрезной доски и область применения
+    p.article__p Технология производства подразумевает сушку в специальных камерах. Процесс сушки занимает достаточно много времени и является необходимым условием. Именно благодаря сушке изделия приобретают нужные показатели прочности.
+
+    p.article__p Существует несколько типов распила:
+    p.article__p — с линией среза по центру ствола;
+    p.article__p — с углом наклона колец;
+    p.article__p — от середины бревна.
+
+    p.article__p  Доска сухая обрезная из хвойных пород деревьев - популярный материал для изготовления лестничных маршей, сооружения опалубки, черновой отделки помещений, ее используют при проведении строительных и кровельных работ, а также в мебельной промышленности. Пиломатериал одинаково подходит для проведения внутренних и наружных работ.
