--- a/src/doska-strogannay.pug
+++ b/src/doska-strogannay.pug
@@ -113,6 +113,27 @@ block product
                         td ЭКСТРА
                         td.price 10625 руб.
 
+    h3.article__title Особенности древесины для досок
 
-    h3.article__title
-    p.article__p
+    p.article__p При жизни сосна и ель выделяют различные вещества, которые требуются для их собственной жизни, и, вместе с тем незаменимы для поддержания здоровья людей и домашних животных. Даже после обработки досок древесина продолжают продуцировать эти полезные компоненты. Речь идёт о фитонцидах, убивающих болезнетворные микроорганизмы, и антиоксидантах, препятствующих образованию раковых опухолей, ускоряющих процессы метаболизма и замедляющих старение человека. Таким образом, использование доски из хвойных пород дерева оздоровляет атмосферу в любом помещении — как жилом, так и хозяйственном.
+    h3.article__title Виды и цены
+    p.article__p На нашем сайте имеется широкий выбор строганной доски, которая представляет собой сухой материал с влажностью 10-12%. Сорт, как правило, 1-й. Купить данный товар можно поштучно или кубами. 1 штука стоит от 100 руб., метр куб. – от 12000 руб. (также осуществляется оптовая продажа).
+
+    p.article__p Стоимость товара зависит от ряда факторов:
+    p.article__p — качества поверхности;
+    p.article__p — обработки;
+    p.article__p — размера;
+    p.article__p — материала изготовления;
+    h3.article__title Размер и назначение строганных досок
+    p.article__p Производитель предлагает широкий размерный ряд досок, высушенных в камере:
+    p.article__p — толщиной от 20 до 50мм;
+    p.article__p — шириной от 90 до 250мм;
+    p.article__p — длиной от 3 до 6 м.
+    p.article__p — ремонт, отделка (потолок, стены, обрешетки и другое);
+    p.article__p — потолочный и стенной интерьер (создание винных погребов и другое);
+    p.article__p — промышленность (судостроение).
+    p.article__p Качественно высушенная доска очень востребована в строительстве, поэтому на нашем складе в Москве происходит ежедневная отгрузка данного материала для таких нужд: производство мебели;
+    h3.article__title Доставка и оплата
+    p.article__p Чтобы купить строганную доску, достаточно оставить заявку на нашем сайте. Мы осуществляем доставку собственным транспортом компании или возможен самовывоз материала. Стоимость доставки будет зависеть от объемов заказа и от удаленности заказчика от склада.
+
+    p.article__p Оплатить заказ можно наличными или банковской картой.
