--- a/src/fanera-laminirovannaya.pug
+++ b/src/fanera-laminirovannaya.pug
@@ -109,5 +109,18 @@ block product
 
 
 
-    h3.article__title
-    p.article__p
+    h3.article__title Ламинированная фанера - цена
+
+    p.article__p Ламинированная фанера – материал, который может похвастаться такими качествами, как замечательная устойчивость к влаге и долговечность службы. Поэтому используют его в строительстве достаточно часто. Материал изготавливают из дерева, допускается как использование одного сорта, так и нескольких. Купить ламинированную фанеру в Москве можно у нас. На нашем сайте компании «Лесмосбаза» вы найдете обширный ассортимент продукции.
+
+    h3.article__title Характеристики материала
+
+    p.article__p Фанера может иметь различную толщину – от 3 до 40 мм. Изготовление происходит методом склеивания слоев шпона между собой. Для этого используют только специальный клей. Он должен выдерживать быструю перемену температурного режима. После того, как материал прошел процесс склеивания, он попадает под пресс. Затем фанеру обрезают, чтобы ее размер соответствовал нужному. После этого материал подвергается важной процедуре – шлифовке. Таким образом он становится абсолютно гладким. Теперь дело за малым – ламинированная фанера обклеивается специальным материалом. Именно эта технология изготовления придает листу завидную стойкость к повреждениям, температуре, воде. Чтобы оклеить фанеру применяют не обычную пленку, а бумагу. Предварительно ее обрабатывают фенольной смолой.
+
+    p.article__p Чтобы закрепить проделанную работу по укреплению материала, ему требуется пройти финальную покраску. Обязательно прокрашивают торцы фанеры. Теперь она готова прослужить долгое время и в любых условиях. Торцы красят акриловой краской. Такая обработка внешних краев приближает их по качеству основного покрытия.
+
+    h3.article__title Основные сферы использования
+
+    p.article__p Влагостойкий материал применяют для оборудования детских площадок, для обустройства перегородок в бытовках, как опалубку в бетонных конструкциях. Также ламинированный материал применяют при создании того или иного интерьера в доме. Интересно, что он может быть разного цвета. Какой оттенок будет иметь лист ламинированной фанеры в дальнейшем – зависит от того, какой пленкой его покрывают. Поэтому этот материал применяют и для изготовления мебели, к примеру, встроенных шкафов. Но максимальное применение все же попадает на обустройство опалубки во время изготовления монолитных элементов конструкций в строительстве. Такие качества, как легкость, износостойкость и прочность дают возможность строителям применять этот материал не менее 20 раз. Чтобы он служил дольше и лучше, листы покрывают составом, который не дает им приклеиваться к бетону.
+
+    p.article__p Если вас интересует цена ламинируемой фанеры в Москве, тогда обратитесь к нашему ассортименту. Стоимость материала указана именно там. Когда вы решите приобрести фанеру, создайте заявку на нашем сайте, или же наберите наш номер. Мы поможем вам быстро оформить заявку, а после обговорим условия доставки.
