--- a/src/imitaciya-brusa.pug
+++ b/src/imitaciya-brusa.pug
@@ -160,6 +160,32 @@ block product
                         td ЭКСТРА
                         td.price 238 руб.
 
+    h3.article__title Изготовление
 
-    h3.article__title
-    p.article__p
+    p.article__p Основное сырье для изготовления имитации бруса – древесина сосны и лиственницы. Хвойные породы отличаются высоким содержанием смолы, благодаря которой древесина обладает защитой от насекомых и долговечностью.
+
+    p.article__p В процессе обработки заготовки высушивают, придают им нужные размеры и форму. Особенность конструкции состоит в наличии системы шип-паз и вентиляционных бороздок по всей длине доски. Такой профиль обеспечивает простой монтаж и плотное соединение элементов.
+    h3.article__title Размеры
+    p.article__p Размеры, предлагаемые компанией «РусЛесГрупп», соответствуют основным требованиям строительного рынка:
+    p.article__p — длина от <b>2 до 6 метров;</b>
+    p.article__p — ширина от <b>145 до 190 мм;</b>
+    p.article__p — толщиной от <b>10 до 20 мм.</b>
+
+    p.article__p Особенность конструкции и диапазон размеров позволяют использовать имитацию бруса в различных работах. Изделия из сосны чаще используют для отделочных работ внутри помещения. Влагоустойчивая и долговечная древесина лиственницы незаменима для облицовки фасада.
+
+    p.article__p Цена имитации бруса за метр квадратный определяется не только размерами, породой дерева, но и сортом.
+    h3.article__title Сортамент
+    p.article__p Пиломатериал подразделяется на категории: Экстра, Прима, А АВ, В С. Разбежность между сортами заключается в количестве различных пороков на 1 м погонный.
+    p.article__p — Экстра, Прима – изделия с отлично обработанной поверхностью и минимальным количеством изъянов.
+    p.article__p — А- присутствует небольшое количество сучков, трещин, смоляных кармашков.
+    p.article__p — АB- допускаются смоляные карманы, трещины, невыпадающие сучки.
+    p.article__p — С- сучки, неравномерность цвета, смоляные кармашки, трещины.
+    p.article__p Пиломатериалы разных сортов проходят одну и ту же технологическую цепочку обработки, поэтому наличие сучков и трещин не влияет на прочность и долговечность продукции. Изделия всех сортов обладают отличными рабочими характеристиками и достойно ведут себя в процессе эксплуатации.
+    p.article__p Преимущества имитации бруса:
+    p.article__p — универсальность – применяется во внутренней и внешней отделке;
+    p.article__p — дополнительное утепление;
+    p.article__p — высокий уровень обработки;
+    p.article__p — простой монтаж;
+    p.article__p — природный материал;
+    p.article__p — доступная стоимость
+    p.article__p Имитацию бруса по цене от 330 до 1600 руб/м2 предлагает купить в Москве наша компания. Пиломатериал можно купить в розницу и оптом. Размерная сетка позволяет подобрать вариант, как для оформления интерьера, так и для облицовки фасада. Использование имитации бруса – это возможность «одеть» дом по последней моде за разумные деньги.
