--- a/src/terrasnaya-doska.pug
+++ b/src/terrasnaya-doska.pug
@@ -490,3 +490,20 @@ block product
 
 
 
+    h3.article__title Террасная доска
+
+    p.article__p Для устройства пола на открытых объектах, таких как беседка, крыльцо, балкон, патио или садовые дорожки, используется особый тип материала – террасная доска. Современное производство допускает применение как натуральных, так и комбинированных компонентов для изготовления таких материалов, однако классическим вариантом остается натуральное дерево.
+
+    p.article__p Террасная доска представляет собой один из видов декинга, известного также как «садовый паркет». Он отличается высокой прочностью, устойчивостью к воздействию природных факторов, а также отличными эксплуатационными свойствами. При правильном монтаже и своевременном уходе такой пол в течение долгого времени будет оставаться прочным, надежным и красивым.
+    h3.article__title Особенности использования террасной доски
+
+    p.article__p Внешний вид и срок эксплуатации такого материала зависят не только от типа древесины, но и от способа монтажа. Если вы решили купить террасную доску, укладывать такой декинг необходимо по особой схеме – оставляя зазор между отдельными изделиями. В это пространство будет стекать вода после дождя, что защитит покрытие от деформации и трещин.
+    h3.article__title Выгодное предложение
+    p.article__p В нашем ассортименте вы найдете самые популярные виды напольных покрытий. Декинг представлен в двух вариантах исполнения:
+    p.article__p — «гладкий»
+    p.article__p — «вельвет»
+    p.article__p Вы можете выбрать террасную доску, которая подойдет вам не только по цене, но и по ряду характеристик декинга:Декинг представлен в двух вариантах исполнения:
+    p.article__p — сорт: Экстра, Прима, А, А-В, В, В-С, С и Эконом;
+    p.article__p — длина: 2,0-6,0 м;
+    p.article__p — толщина: 25-45 мм;
+    p.article__p — ширина: 115-143 мм.
