--- a/src/doska-polovaya.pug
+++ b/src/doska-polovaya.pug
@@ -75,7 +75,32 @@ block product
                         td ЭКСТРА
                         td.price 637 руб.
 
+    h3.article__title Свойства древесины
 
+    p.article__p Хвойные породы обладают целым набором свойств, необходимых хорошему материалу для покрытия. Их древесина хорошо удерживает тепло, обладает хорошей прочностью и, будучи обработанной, приятна на ощупь. Благодаря наличию большого количества смолы, такое дерево плохо поддаётся гниению и разрушению живыми организмами. Наличие красивой текстуры и ярко выраженных годичных колец придаёт ему ценные эстетические свойства, а выделение в атмосферу биологически активных веществ позитивно сказывается на здоровье человека.
 
-    h3.article__title
-    p.article__p
+    h3.article__title В чем заключаются преимущества доски из натурального дерева?
+
+    p.article__p Каждый хозяин желает, чтобы его покрытие обладало привлекательным внешним видом, а также было способно выдерживать повышенную нагрузку и влажность. В этом плане как ничто лучше подойдет строганный пиломатериал, при создании которого использовался массивный кусок дерева. По сути, такие доски для пола - это идеальный материал, обладающий уникальной стойкостью к нагрузкам и механическим повреждениям, а также полной экологической чистотой.
+
+    h3.article__title Разновидности половых досок из дерева
+
+    p.article__p Важно отметить, что половые материалы могут быть нескольких типов. Существует так называемый европол, создаваемый согласно стандартам качества Европейского Союза (при его изготовлении используется массив дерева твердых пород). Кроме того, есть доска шпунтованная, боковые поверхности которой обработаны под шпунт, что повышает качество ее укладки.
+
+    p.article__p Также такой пиломатериал может изготавливаться из различных типов древесины. В одном случае используется лиственница, а в другом – массивный кусок хвойного дерева. От этого зависит и стоимость одной штуки (или м2) доски.
+    h3.article__title Где можно применять доску пола?
+    p.article__p Он может использоваться в процессе обустройства деревянного пола в жилых помещениях различного типа (включая те, где присутствует высокий уровень влажности). С помощью него может быть создано качественное и долговечное покрытие в таких помещениях, как:
+
+    p.article__p Существует несколько типов распила:
+    p.article__p — загородный дом;
+    p.article__p — коттедж;
+    p.article__p — квартира;
+    p.article__p — баня
+
+    p.article__p Полученный в итоге деревянный пол имеет максимально естественный внешний вид, так как изготавливается из цельного массива сухой древесины. В случае использования лиственницы он будет обладать еще и повышенной стойкостью к влажности.
+
+    h3.article__title Стоимость
+
+    p.article__p Если вам нужна половая доска в Москве, то вы можете купить ее дешево на сайте нашей компании. При необходимости специалисты предприятия готовы произвести расчет за штуку или м2 материала. На данный момент цена начинается от 360 рублей.
+
+    p.article__p Вы можете заказать и купить половую доску прямо сегодня! Гарантируем оперативность обработки заявки доставки.
