--- a/src/fanera-fsf.pug
+++ b/src/fanera-fsf.pug
@@ -193,6 +193,22 @@ block product
                         td.price 2167 руб.
 
 
+    h3.article__title Фанера ФСФ
 
-    h3.article__title
-    p.article__p
+    p.article__p Фанера является материалом, изготавливаемым из шпона путем склеивания между собой слоев специальным составом. Обычно его производят в виде квадратных элементов. Очень популярен в строительной сфере, а также мебельной промышленности. Фанера ФСФ – расшифровка этой аббревиатуры проста. Первая буква Ф и обозначает название материала, то есть – «фанера». СФ – обозначает название клея – смоляной фенолформальдегидный. Изготавливают шпон из древесной стружки. Материал может быть как из лиственных, так и из хвойных пород деревьев. ФСФ склеивается из нескольких слоев шпона – от трех и больше. Из-за специфического клея на торцах материала можно увидеть темные красные или же бурые прослойки. Если вы решили ФСФ купить в Москве, то наша компания «Лесмосбаза» предлагает ознакомиться вам с нашим ассортиментом. Мы предлагаем качественную продукцию по привлекательной стоимости.
+    h3.article__title Где используют фанеру
+    p.article__p Обязательно хвойный шпон используют снаружи, если материал должен быть влагостойким. Внутренние элементы могут быть и из лиственного дерева. Отмечается особая устойчивость к микроорганизмам. Такую фанеру не потревожит грибок, а также гниение. Березовая ФСФ выполняется из древесины одноименного названия. Отличается замечательной прочностью, а также износостойкостью. Стоимость такой фанеры достаточно высока. Шпон для изготовления выбирают только березовый, из-за этого прочность материала увеличивается приблизительно на 20%. Однако в этом случае вырастает и вес.
+
+    p.article__p ФСФ является натуральной продукцией. Ее свойства позволяют использовать материал в любых климатических зонах. Придется по вкусу он тем, кто имеет тонкий вкус. Взгляд на эту необычную фанеру приносит эстетическое наслаждение. В строительстве этот материал чаще всего применяют во время отделочных работ. Однако он имеет недостаток – в составе содержатся токсичные элементы. Именно поэтому для внутренней отделки ФСФ используют крайне редко.
+    h3.article__title Технические характеристики
+
+    p.article__p ФСФ разделяют по гладкости. Необработанная – НШ. Ш1 – обработана с 1 стороны. Ш2 – обработана с 2-ух сторон.
+    p.article__p Сорта фанеры ФСФ разделяются на 5 вариантов. Различают их по поверхности материала:
+    p.article__p — <b>В</b> – видимых дефектов нет.
+    p.article__p — <b>ВВ</b> – отсутствуют сучки, однако, могут быть черные точки.
+    p.article__p — <b>Е</b> – элитный сорт. Без изъянов.
+    p.article__p — <b>СР</b> – присутствие дефектов, которые прячут под кусочками шпона.
+    p.article__p — <b>С</b> – присутствуют сучки.
+    p.article__p — <b>СС</b> – материал со многими дефектами.
+
+    p.article__p Цена на ФСФ в Москве зависит от всех этих параметров. Играет роль и материал, используемый при изготовлении, и сорт, и качество шлифовки. Мы предлагаем ознакомиться с ассортиментом фанеры, расположенным на нашем сайте. Там же представлены цены. После заказа мы поможем определиться с доставкой товара.
