--- a/src/osb-3-plita.pug
+++ b/src/osb-3-plita.pug
@@ -71,5 +71,23 @@ block product
                         td.price 1173 руб.
 
 
-    h3.article__title
-    p.article__p
+    h3.article__title Осб-плита – это многослойная конструкция, которая изготавливается путем прессовки деревянной стружки.
+
+    p.article__p Мы предлагает широкое разнообразие товара, среди которого можно найти необходимый стружечный лист. Наиболее применяемый среди отечественных мастеров Осб №3 -влагостойкий материал, который активно используется для возведения наружных и внутренних конструкций.
+    h3.article__title Листы ОСБ: размеры и цены
+
+    p.article__p Толщина и номер ОСБ фанеры напрямую влияет не только на качество материала, но и на его стоимость. На данный момент цена начинается от за 640 рублей за плиту. Толщина же варьируется от 9мм до 18мм. Размеры листа как правило 1.22х2.44 мм
+    h3.article__title Использование ОСБ
+
+    p.article__p Сфер применения ОСБ панелей насчитывается огромное количество:
+    p.article__p — Кровельные работы;
+    p.article__p — Отделка помещений;
+    p.article__p — Накрытие для пола;
+    p.article__p — Обшивка стен;
+    p.article__p — Изготовление промышленной и бытовой мебели;
+    p.article__p — Возведение опалубки.
+
+    p.article__p На сегодняшний день множество строительно-ремонтных работ предполагают использование водостойких стружечных листов. Это и не удивительно, ведь материал обладает целым рядом положительных характеристик. Панели прочные и эластичные, что способствует комфортному монтажу. Листы полностью безопасны для окружающих, ведь изготовлены на 90% из древесины. Главное обращать внимание на количество и тип клея, который был использован для скрепления стружки на одном м2.
+    h3.article__title Использование ОСБ
+    p.article__p — Высокое качество материалов и доступная цена позволяет совершить крупные партии оптовых закупок при небольших затратах.
+    p.article__p — Доставка товара осуществляется по всей территории Москвы и России. Имеется собственный автотранспорт и возможность самовывоза со склада.
