--- a/src/parketnaya-doska.pug
+++ b/src/parketnaya-doska.pug
@@ -400,3 +400,26 @@ block product
                         td 3
                         td 5
                         td.price 3034 руб.
+
+
+
+    h3.article__title Паркетная доска
+
+    p.article__p Среди различных видов материалов, предназначенных для напольного покрытия, классическим вариантом остается паркетная доска. Она отличается аккуратным внешним видом, демонстрируя при этом практичность и долговечность в использовании. Именно поэтому паркетную доску можно купить как для загородного дома, так и для квартиры.
+
+    p.article__p При изготовлении такого материала используются исключительно инновационные технологии и новейшее оборудование. Такой подход позволяет сохранить неповторимую текстуру древесного массива и богатство его рисунка. Кроме того, существует возможность покраски паркетной доски в любой цвет, который наилучшим образом впишется в интерьер и дополнит его.
+
+    p.article__p Технологии изготовления и виды древесины, используемые при производстве паркетной доски, во многом влияют и на цену готовых изделий.
+
+    p.article__p Также важным преимуществом такого материала можно считать возможность многократной обработки напольного покрытия, изготовленного из массива дерева. По истечении времени, если материал изменил свой внешний вид в результате естественного износа или под воздействием агрессивных факторов, не составит труда вернуть ему первозданный вид.
+    h3.article__title Паркетная доска: Ассортимент и цены
+
+    p.article__p Технологии изготовления покрытия дают возможность использовать такой материал для оформления пола без дополнительной обработки. Так вы сумеете купить в Москве практичную и надежную паркетную доску, на сайте компании «ПримаЛес» указана вся актуальная информация об изделиях – цены, описания, а также характеристики:
+    p.article__p — материал – лиственница;
+    p.article__p — способ соединения – «шип-паз»;
+    p.article__p — сорт – А, В, С, Э, Эконом;
+    p.article__p — длина – 0,6-3 м;
+    p.article__p — ширина – 110-200 мм;
+    p.article__p — толщина – 18-19 мм.
+
+    p.article__p Влажность досок составляет до 8%. Такая особенность позволяет гарантировать длительный срок службы напольного покрытия без деформаций и повреждений.
