--- a/src/vagonka.pug
+++ b/src/vagonka.pug
@@ -102,6 +102,34 @@ block product
                         td.price 161 руб.
 
 
+    h3.article__title Качественная деревянная вагонка широко применяется для фасадной и внутренней отделки.
 
-    h3.article__title
-    p.article__p
+    p.article__p За счет производства изделий из натуральной древесины гарантируются ее низкая теплопроводность, долгий срок службы и эффектный внешний вид.
+
+    h3.article__title Деревянная вагонка: разновидности и их отличия, размеры
+
+    p.article__p Каждый класс деревянной вагонки устанавливается согласно ее состоянию. Следующая классификация по группам позволяет легко подобрать оптимальный тип фасадного пиломатериала для работы:
+    p.article__p Основные виды:
+    p.article__p — <b>"Экстра"</b>. Не имеет дефектов, обладает самой высокой ценой.
+    p.article__p — <b>"Прима"</b>. Может включать минимальное количество сучков.
+    p.article__p — <b>"A"</b>. Имеет незначительные природные дефекты.
+    p.article__p — <b>"AB"</b>. Имеет минимум дефектов, дешевле группы "A".
+    p.article__p — <b>"B"</b>. Может иметь цветовое изменение оттенка древесины, включать сучки.
+    p.article__p — <b>"C"</b>. Самая дешевая доска с присутствием дефектов.
+
+    p.article__p Для указанных групп цена квадратного метра (при одинаковых размерах и объеме) будет несколько отличаться. Поэтому узнать, сколько будет стоить фасадный пиломатериал, поможет ознакомление с его характеристиками.
+    h3.article__title Особенности применения вагонки
+
+    p.article__p Стоимость разных видов вагонки зависит от множества критериев: размер изделия и его цена за квадратный метр, качество. Но не менее важен и материал досок:
+    p.article__p — сосна, ель (для отделки деревянных домов, закрытых террас);
+    p.article__p — липа, осина (для бань и саун);
+    p.article__p — лиственница (для жилых помещений (потолки, стены) саун или бань).
+
+    p.article__p При выборе нужных размеров материала также стоит учитывать и отличия их профилей. От особенностей скрепления фасадного материала, зависит количество квадратных метров изделий, требуемых для проведения работ. Разделяется вагонка по типу профилей на такие группы: евро, штиль (колхозница, крестьянка).
+    h3.article__title Дешевая вагонка в Москве: Как выбрать и заказать изделия?
+
+    p.article__p Наша компания предлагает всем желающим купить по выгодной цене деревянную вагонку в любом объеме. У нас каждому клиенту доступен опт и розница: в каталогах компании может быть приобретен 1 м2, 1 штука (например, как потолочный материал), 1 куб изделий.
+
+    p.article__p Для всех товаров указан размер (длина от 3 до 6 м, ширина, толщина) и сорт. Подробная информация позволяет легко подобрать недорогой материал, независимо от того будет заказан всего квадратный метр сырья или целая пачка.
+
+    p.article__p Доставка вагонки возможна не только по Москве и области, но и по всей России автотранспортом компании. Возможен самовывоз.
